--- a/2014-08-26-Combining-Ruby-Modules-and-Classes.html
+++ b/2014-08-26-Combining-Ruby-Modules-and-Classes.html
@@ -1,6 +1,7 @@
 ---
 title: Combining Ruby Modules and Classes
 layout: post
+excerpt: Beginner's excited ramblings about the Ruby language
 ---
 <p><b>Ah, summer...</b></p>
 <p>I'm currently learning Ruby on Rails.  As a total beginner to Ruby,
