--- a/2014-09-08-Deciding-on-a-web-application-framework.html
+++ b/2014-09-08-Deciding-on-a-web-application-framework.html
@@ -1,7 +1,11 @@
 ---
 layout: post
 title: Deciding on a web application framework
+excerpt: With a new framework coming out every week, how is a professional
 ---
+
+<h4>Disclaimer: When I wrote this I knew absolutely nothing about Node. Now I know that Node is about as much of a framework as the Ruby language itself. But will keep this here... for science.</h4>
+
 <p>I've devoted quite a few days in the past month to learning Ruby on Rails.
 This decision seemed logical: since I was a beginner, I needed a framework and language that would be easy to comprehend (hence Ruby).
 Also, I'd seen that many applications use the framework and that many freelancers specialize in programming it. Hey, it's 
