--- a/2015-04-02-What-makes-a-good-machine.html
+++ b/2015-04-02-What-makes-a-good-machine.html
@@ -1,6 +1,7 @@
 ---
 title: What makes a good machine?
 layout: post
+excerpt: Ramblings on how people want to use machines, and how people think about making machines
 ---
 <p>Bored in computer graphics class yesterday, my mind drifted to how people use machines best. A vague and general question, I thought
 of the most successful machines of the 20th century (the automobile, the typewriter, the personal computer, the internet) and what made them so great.</p>
