--- a/2015-05-09-Session-flash-part1.html
+++ b/2015-05-09-Session-flash-part1.html
@@ -1,6 +1,7 @@
 ---
 title: How to build a Session Flash in Angular and Bootstrap, Part 1
 layout: post
+excerpt: The first part of the how-to tutorial
 ---
 <p>
     People coming from Ruby on Rails, web2py, and other opinionated frameworks to Angular and Node.js will
