--- a/2015-05-09-Session-flash-part2.html
+++ b/2015-05-09-Session-flash-part2.html
@@ -1,6 +1,7 @@
 ---
 title: How to build a Session Flash in Angular and Bootstrap, Part 2
 layout: post
+excerpt: The second part of the how-to tutorial
 ---
 <p>
     In this part, we'll dive into building the Session Flash module. If you haven't seen
