--- a/2015-08-26-Browserify-rules.html
+++ b/2015-08-26-Browserify-rules.html
@@ -2,6 +2,7 @@
 title: Browserify rules
 layout: post
 excerpt: Then something clicked, and I understood the full awesome power of Browserify
+tags: ["javascript","frontend"]
 ---
         <p>
             While I was developing some client javascript today, I came across a situation where I wanted server-side directory
