--- a/2015-10-27-Recursive-queries-in-Postgres.html
+++ b/2015-10-27-Recursive-queries-in-Postgres.html
@@ -14,13 +14,13 @@ tags: ["data","postgres","sql"]
 </p>
 
 <p>
-    Here's our simplest problem statement: **How do I find all the children of a given group**?
+    Here's our simplest problem statement: <b>How do I find all the children of a given group</b>?
 </p>
 
 <p>
     To begin answering this question, we can model our hierarchy as a tree.<br>
 
-    <img class="img-responsive" src="img/group_hierarchy.png" /><br>
+    <img class="img-responsive" src="/img/group_hierarchy.png" /><br>
 
     Each group can be modeled as an object with properties:
 <pre><code>class Group
@@ -48,7 +48,7 @@ tags: ["data","postgres","sql"]
 | 7        | F          | ...         | 3               |
 +----------+------------+-------------+-----------------+
 </code></pre>
-    There are other, more "relational" ways to do this, such as creating a separate <code>group_relationship</code> table where
+    The more "relational" way to do this is create a separate <code>group_relationship</code> table where
     we can model all the different types of relationships between groups (parent, child, etc.), but for the purposes of this post
     our solution will allow us to reference just one table, as we'll soon see.
 </p>
@@ -75,7 +75,7 @@ def get_all_children(group_name):
 <p>
     We'd like to take a similar approach as before, only in SQL. In come <i>Common Table Expressions (CTE's)</i>, or in postgres, <code>WITH</code> queries.
     The (http://www.postgresql.org/docs/8.4/static/queries-with.html)[postgres docs] have a great resource on how these work, but I'll give a short overview here.
-    <i>CTE's</i> are like sub-queries. Let's say we want the **user names of all members of lab groups (A or B)**. In postgres:
+    <i>CTE's</i> are like sub-queries. Let's say we want the <b>user names of all members of lab groups (A or B)</b>. In postgres:
 <pre><code>SELECT DISTINCT u.user_name
 FROM (
     SELECT *
@@ -143,7 +143,7 @@ SELECT group_name from recursive_group;
     resulting in an infinite loop on the database.
 </p>
 
-<h3>A thought on business log</h3>
+<h3>A thought on business logic</h3>
 <p>
     As Martin Fowler writes in Patterns of Enterprise Application Architecture, "there are few things more illogical than 'business logic'".
     It is a natural jump for business people to have Group D access some area of lab A, only on Tuesdays, and when revenue growth is below 50%.
