--- a/2015-10-27-Recursive-queries-in-Postgres.html
+++ b/2015-10-27-Recursive-queries-in-Postgres.html
@@ -20,7 +20,7 @@ tags: ["data","postgres","sql"]
 <p>
     To begin answering this question, we can model our hierarchy as a tree.<br>
 
-    <img class="img-responsive" src="/img/group_hierarchy.png" /><br>
+    <img class="img-responsive" src="{{ site.url }}/img/group_hierarchy.png" /><br>
 
     Each group can be modeled as an object with properties:
 <pre><code>class Group
