--- a/2015-11-02-Prevent-GA-dupes.html
+++ b/2015-11-02-Prevent-GA-dupes.html
@@ -26,7 +26,7 @@ ga('send', 'pageview');
     to prevent people from adding duplicate scripts to their pages. I tested it and saw it was true - if the snippet was included twice, we
     had two scripts inserted to the DOM as the below picture shows.
 </p>
-        <img src="/img/duplicate_script.png" class="img-responsive" />
+        <img src="{{ site.url }}/img/duplicate_script.png" class="img-responsive" />
 <h3>Why would you include the GA snippet more than once, anyway?</h3>
 <p>
     If you're working on a legacy codebase like I am, it's really hard to find one place to include a script that will make it to every view
